Mobile - Fix horizontal scroll bar top & bottom margins

--- a/src/app/shared/components/mobile-search/mobile-search.component.scss
+++ b/src/app/shared/components/mobile-search/mobile-search.component.scss
@@ -36,6 +36,7 @@
   align-items: center;
   padding: 0 12px;
   height: 44px;
+  margin-bottom: -12px;
 }
 
 .search-field {
